Closed Bug 1630376 Opened 5 years ago Closed 5 years ago

Windows builds with --enable-openpgp fail with undeclared identifier errno

Categories

(MailNews Core :: Build Config, defect)

defect

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 77.0

People

(Reporter: rjl, Assigned: rjl)

References

Details

Attachments

(1 file)

Caused by changes made during review process that were not verified.

In file included from /builds/worker/checkouts/gecko/comm/third_party/rnp/src/lib/crypto/s2k.cpp:33:
INFO -  /builds/worker/checkouts/gecko/comm/third_party/niwcompat/sys/time.h(29,5): error: use of undeclared identifier 'errno'
INFO -      errno = EINVAL;

Pushed by thunderbird@calypsoblue.org:
https://hg.mozilla.org/comm-central/rev/27e481da98bc
Add errno.h header to RNP clang-cl compatibility code. DONTBUILD r=kaie

Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 77.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: