Bug 1630376 - Add errno.h header to RNP clang-cl compatibility code. DONTBUILD r=kaie

Differential Revision: https://phabricator.services.mozilla.com/D71092

--HG--
extra : moz-landing-system : lando